Bring styling of organisation templates in to line with rest of project. Fixed misalignment of Edit and Delete buttons in product.html.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -43,7 +43,6 @@ a:visited {
 .link-btn-purple {
     color: white;
     background-color: #6d41e8;
-    margin-bottom: 10px;
 }
 
 .link-btn-red {
